--- a/experiment1.html
+++ b/experiment1.html
@@ -44,14 +44,6 @@ Your browser doesn't appear to support the HTML5 <code>canvas</code> element.
         vertexPositionAttribute = gl.getAttribLocation(shaderProgram, 'aVertexPosition');
         gl.enableVertexAttribArray(vertexPositionAttribute);
 
-        // ----- INITIALIZE BUFFERS -----------
-        // lets set up some buffer shit
-        var horizAspect = 480.0/640.0;
-
-        // obtain a buffer and bind into the context
-        squareVerticesBuffer = gl.createBuffer();
-        gl.bindBuffer(gl.ARRAY_BUFFER, squareVerticesBuffer);
-
         // create an array with the coordinates for the square
         var vertices = [
             1.0, 1.0, 0.0,
@@ -60,26 +52,51 @@ Your browser doesn't appear to support the HTML5 <code>canvas</code> element.
             -1.0, -1.0, 0.0
         ];
 
-        // create an array of WebGL floats
-        var vertices_float = new Float32Array(vertices);
+        // set up the buffer and populate it with the vertices
+        initializeBuffer(gl, vertices);
 
-        // establish vertices for the object
-        gl.bufferData(gl.ARRAY_BUFFER, vertices_float, gl.STATIC_DRAW);
-        // ----- END INITIALIZE BUFFERS -------
+        // draw the buffer
+        drawScene(gl);
 
-        // ----- DRAW SCENE -------------------
-        gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+        // periodically create random vertices
+        setInterval(function() {
+            var vertices = [
+                Math.random(), Math.random(), 0.0,
+                Math.random(), Math.random(), 0.0,
+                Math.random(), Math.random(), 0.0,
+                Math.random(), Math.random(), 0.0
+            ];
 
-        var perspectiveMatrix = makePerspective(45, 640/480.0, 0.1, 100.0);
+            initializeBuffer(gl, vertices);
+            drawScene(gl);
+        }, 1000);
 
-        loadIdentity();
-        mvTranslate([-0.0, 0.0, -6.0]);
+        function drawScene(gl) {
+            // this is all still a mystery to me. how do we translate the buffer into something visible?
+            gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
 
-        gl.bindBuffer(gl.ARRAY_BUFFER, squareVerticesBuffer);
-        gl.vertexAttribPointer(vertexPositionAttribute, 3, gl.FLOAT, false, 0, 0);
-        setMatrixUniforms(shaderProgram, perspectiveMatrix);
-        gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
-        // ----- END DRAW SCENE ---------------
+            var perspectiveMatrix = makePerspective(45, 640/480.0, 0.1, 100.0);
+
+            loadIdentity();
+            mvTranslate([-0.0, 0.0, -6.0]);
+
+            gl.vertexAttribPointer(vertexPositionAttribute, 3, gl.FLOAT, false, 0, 0);
+            setMatrixUniforms(shaderProgram, perspectiveMatrix);
+            gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
+        }
+
+        function initializeBuffer(gl, vertices) {
+            var vertices_float = new Float32Array(vertices);
+
+            // create a buffer and bind into the context
+            var buffer = gl.createBuffer();
+            gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
+
+            // establish vertices for the buffer
+            gl.bufferData(gl.ARRAY_BUFFER, vertices_float, gl.STATIC_DRAW);
+
+            return buffer;
+        }
 
     }
     $(document).on('ready', function() {
