--- a/threejs5.html
+++ b/threejs5.html
@@ -26,38 +26,27 @@
 
         var geometry = new THREE.Geometry();
 
-//        // basic xyz identifier
-//        geometry.vertices.push(new THREE.Vector3(0, 0, 0));
-//        geometry.vertices.push(new THREE.Vector3(5, 0, 0));
-//
-//        geometry.vertices.push(new THREE.Vector3(0, 0, 0));
-//        geometry.vertices.push(new THREE.Vector3(0, 5, 0));
-//
-//        geometry.vertices.push(new THREE.Vector3(0, 0, 0));
-//        geometry.vertices.push(new THREE.Vector3(0, 0, 5));
+        //triangle
+        geometry.vertices.push(new THREE.Vector3(0, 15,15));
+        geometry.vertices.push(new THREE.Vector3(15, 15,15));
+
+        geometry.vertices.push(new THREE.Vector3(15, 15,15));
+        geometry.vertices.push(new THREE.Vector3(15, 0,15));
+
+        geometry.vertices.push(new THREE.Vector3(15, 0,15));
+        geometry.vertices.push(new THREE.Vector3(0, 15,15));
+
+        geometry.vertices.push(new THREE.Vector3(15, 15,15));
+        geometry.vertices.push(new THREE.Vector3(15, 15,0));
+
+        geometry.vertices.push(new THREE.Vector3(15, 15,0));
+        geometry.vertices.push(new THREE.Vector3(15, 0,15));
+
+        geometry.vertices.push(new THREE.Vector3(15, 15,0));
+        geometry.vertices.push(new THREE.Vector3(0, 15,15));
 
 
-//        triangle
-//        geometry.vertices.push(new THREE.Vector3(-15, 15,15));
-//        geometry.vertices.push(new THREE.Vector3(15, 15,15));
-//
-//        geometry.vertices.push(new THREE.Vector3(15, 15,15));
-//        geometry.vertices.push(new THREE.Vector3(15, -15,15));
-//
-//        geometry.vertices.push(new THREE.Vector3(15, -15,15));
-//        geometry.vertices.push(new THREE.Vector3(-15, 15,15));
-//
-//        geometry.vertices.push(new THREE.Vector3(15, 15,15));
-//        geometry.vertices.push(new THREE.Vector3(15, 15,-15));
-//
-//        geometry.vertices.push(new THREE.Vector3(15, 15,-15));
-//        geometry.vertices.push(new THREE.Vector3(15, -15,15));
-//
-//        geometry.vertices.push(new THREE.Vector3(15, 15,-15));
-//        geometry.vertices.push(new THREE.Vector3(-15, 15,15));
-
-
-//        grid
+        // grid
         var size = 30, step = 3;
         for(var i = -size; i <= size; i += step) {
             geometry.vertices.push(new THREE.Vector3(-size, -0.04, i));
@@ -89,11 +78,16 @@
         }
         
         var gui = new dat.GUI();
-        gui.add(camera_position, 'x', -40, 40).listen();
-        gui.add(camera_position, 'y', -40, 40).listen();
-        gui.add(camera_position, 'z', -40, 40).listen();
-        gui.add(camera_position, 'distance', 0, 80).listen().onChange(update);
-        gui.add(camera_position, 'rotation',0, Math.PI * 2).listen().onChange(update);
+        var camera_coordinates = gui.addFolder('Camera Coordinates');
+        camera_coordinates.add(camera_position, 'x', -40, 40).listen();
+        camera_coordinates.add(camera_position, 'y', -40, 40).listen();
+        camera_coordinates.add(camera_position, 'z', -40, 40).listen();
+        camera_coordinates.open();
+
+        var camera_controls = gui.addFolder('Camera Controls');
+        camera_controls.add(camera_position, 'distance', 0, 80).listen().onChange(update);
+        camera_controls.add(camera_position, 'rotation',0, Math.PI * 2).listen().onChange(update);
+        camera_controls.open();
 
         function update() {
             camera_position.x = Math.cos(camera_position.rotation) * camera_position.distance;
